--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm run build --if-present
         env:
           URL: ${{ secrets.URL }}
-          URL2: ${{ secrets.URL }}
+          URL2: ${{ secrets.URL2 }}
       
       # - uses: stefanzweifel/git-auto-commit-action@v4
       #   with:
